@@ -1861,12 +1861,12 @@ namespace ILNumerics {
                 tmp =  (float) (in2.imag * (1/in2.real)); 
                 ret.imag =  (float) (in2.real + in2.imag*tmp); 
                 ret.real =  (float) in1/ret.imag; 
-                ret.imag =  (float) (in1*tmp)/ret.imag; 
+                ret.imag = -  (float) (in1*tmp)/ret.imag; 
             } else {
                 tmp =  (float) (in2.real * (1/in2.imag));
                 ret.imag =  (float) (in2.imag + in2.real*tmp); 
                 ret.real =  (float) (in1*tmp)/ret.imag; 
-                ret.imag =  (float) in1/ret.imag; 
+                ret.imag = -  (float) in1/ret.imag; 
             }
             return ret;
         }
@@ -1988,12 +1988,12 @@ namespace ILNumerics {
                 tmp =  (float) (in2.imag * (1/in2.real)); 
                 ret.imag =  (float) (in2.real + in2.imag*tmp); 
                 ret.real =  (float) in1/ret.imag; 
-                ret.imag =  (float) (in1*tmp)/ret.imag; 
+                ret.imag = -  (float) (in1*tmp)/ret.imag; 
             } else {
                 tmp =  (float) (in2.real * (1/in2.imag));
                 ret.imag =  (float) (in2.imag + in2.real*tmp); 
                 ret.real =  (float) (in1*tmp)/ret.imag; 
-                ret.imag =  (float) in1/ret.imag; 
+                ret.imag = -  (float) in1/ret.imag; 
             }
             return ret;
         }
@@ -2115,12 +2115,12 @@ namespace ILNumerics {
                 tmp =  (float) (in2.imag * (1/in2.real)); 
                 ret.imag =  (float) (in2.real + in2.imag*tmp); 
                 ret.real =  (float) in1/ret.imag; 
-                ret.imag =  (float) (in1*tmp)/ret.imag; 
+                ret.imag = -  (float) (in1*tmp)/ret.imag; 
             } else {
                 tmp =  (float) (in2.real * (1/in2.imag));
                 ret.imag =  (float) (in2.imag + in2.real*tmp); 
                 ret.real =  (float) (in1*tmp)/ret.imag; 
-                ret.imag =  (float) in1/ret.imag; 
+                ret.imag = -  (float) in1/ret.imag; 
             }
             return ret;
         }
@@ -2242,12 +2242,12 @@ namespace ILNumerics {
                 tmp =  (float) (in2.imag * (1/in2.real)); 
                 ret.imag =  (float) (in2.real + in2.imag*tmp); 
                 ret.real =  (float) in1/ret.imag; 
-                ret.imag =  (float) (in1*tmp)/ret.imag; 
+                ret.imag = -  (float) (in1*tmp)/ret.imag; 
             } else {
                 tmp =  (float) (in2.real * (1/in2.imag));
                 ret.imag =  (float) (in2.imag + in2.real*tmp); 
                 ret.real =  (float) (in1*tmp)/ret.imag; 
-                ret.imag =  (float) in1/ret.imag; 
+                ret.imag = -  (float) in1/ret.imag; 
             }
             return ret;
         }
@@ -2369,12 +2369,12 @@ namespace ILNumerics {
                 tmp =  (float) (in2.imag * (1/in2.real)); 
                 ret.imag =  (float) (in2.real + in2.imag*tmp); 
                 ret.real =  (float) in1/ret.imag; 
-                ret.imag =  (float) (in1*tmp)/ret.imag; 
+                ret.imag = -  (float) (in1*tmp)/ret.imag; 
             } else {
                 tmp =  (float) (in2.real * (1/in2.imag));
                 ret.imag =  (float) (in2.imag + in2.real*tmp); 
                 ret.real =  (float) (in1*tmp)/ret.imag; 
-                ret.imag =  (float) in1/ret.imag; 
+                ret.imag = -  (float) in1/ret.imag; 
             }
             return ret;
         }
@@ -2496,12 +2496,12 @@ namespace ILNumerics {
                 tmp =  (float) (in2.imag * (1/in2.real)); 
                 ret.imag =  (float) (in2.real + in2.imag*tmp); 
                 ret.real =  (float) in1/ret.imag; 
-                ret.imag =  (float) (in1*tmp)/ret.imag; 
+                ret.imag = -  (float) (in1*tmp)/ret.imag; 
             } else {
                 tmp =  (float) (in2.real * (1/in2.imag));
                 ret.imag =  (float) (in2.imag + in2.real*tmp); 
                 ret.real =  (float) (in1*tmp)/ret.imag; 
-                ret.imag =  (float) in1/ret.imag; 
+                ret.imag = -  (float) in1/ret.imag; 
             }
             return ret;
         }
@@ -2623,12 +2623,12 @@ namespace ILNumerics {
                 tmp =  (float) (in2.imag * (1/in2.real)); 
                 ret.imag =  (float) (in2.real + in2.imag*tmp); 
                 ret.real =  (float) in1/ret.imag; 
-                ret.imag =  (float) (in1*tmp)/ret.imag; 
+                ret.imag = -  (float) (in1*tmp)/ret.imag; 
             } else {
                 tmp =  (float) (in2.real * (1/in2.imag));
                 ret.imag =  (float) (in2.imag + in2.real*tmp); 
                 ret.real =  (float) (in1*tmp)/ret.imag; 
-                ret.imag =  (float) in1/ret.imag; 
+                ret.imag = -  (float) in1/ret.imag; 
             }
             return ret;
         }
@@ -2750,12 +2750,12 @@ namespace ILNumerics {
                 tmp =  (float) (in2.imag * (1/in2.real)); 
                 ret.imag =  (float) (in2.real + in2.imag*tmp); 
                 ret.real =  (float) in1/ret.imag; 
-                ret.imag =  (float) (in1*tmp)/ret.imag; 
+                ret.imag = -  (float) (in1*tmp)/ret.imag; 
             } else {
                 tmp =  (float) (in2.real * (1/in2.imag));
                 ret.imag =  (float) (in2.imag + in2.real*tmp); 
                 ret.real =  (float) (in1*tmp)/ret.imag; 
-                ret.imag =  (float) in1/ret.imag; 
+                ret.imag = -  (float) in1/ret.imag; 
             }
             return ret;
         }
@@ -2877,12 +2877,12 @@ namespace ILNumerics {
                 tmp =  (float) (in2.imag * (1/in2.real)); 
                 ret.imag =  (float) (in2.real + in2.imag*tmp); 
                 ret.real =  (float) in1/ret.imag; 
-                ret.imag =  (float) (in1*tmp)/ret.imag; 
+                ret.imag = -  (float) (in1*tmp)/ret.imag; 
             } else {
                 tmp =  (float) (in2.real * (1/in2.imag));
                 ret.imag =  (float) (in2.imag + in2.real*tmp); 
                 ret.real =  (float) (in1*tmp)/ret.imag; 
-                ret.imag =  (float) in1/ret.imag; 
+                ret.imag = -  (float) in1/ret.imag; 
             }
             return ret;
         }
