@@ -3,6 +3,8 @@ Changes in version 1.3.15
 C: bugfix: diag(vect,-d)
 C: complex division with real values improved for NAN
 C: bugfix:ILArray<>.MaxValue, .MinValue on all NaN's
+C: bugfix:complex subtraction
+C: implemented unary minus on complex
 
 Changes in version 1.3.14
 ===========================
